--- a/assets/css/gird.css
+++ b/assets/css/gird.css
@@ -435,21 +435,27 @@
 }
 
 /* Mobile */
+
+/* Iphone 6+/7+/8+ */
 @media (max-width: 739px) {
   .wide {
-    width: 354px;
+    width: 364px;
   }
 }
 
-/* @media (min-width: 768px) and (max-width: 1024px) {
-} */
-
-/* Mobile width 320px */
-/* @media (max-width: 480px) {
+/* Iphone 6/7/8 */
+@media (max-width: 413px) {
   .wide {
-    width: 294px;
+    width: 334px;
   }
-} */
+}
+
+/* Iphone 5/5S */
+@media (max-width: 374px) {
+  .wide {
+    width: 286px;
+  }
+}
 
 /* > PC low resolution */
 @media (min-width: 1024px) and (max-width: 1239px) {
